--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,12 +49,15 @@ dependencies:
   image_picker: ^0.8.6 
   lottie: ^2.0.0
   geolocator: ^9.0.2
+  nock: ^1.2.1
 
 
 
     
 dev_dependencies:
   flutter_test:
+    sdk: flutter
+  integration_test:
     sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
