--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   lottie: ^2.0.0
   geolocator: ^9.0.2
   nock: ^1.2.1
+  network_image_mock: ^2.0.1
+  mocktail_image_network: ^0.3.1
+  fake_async: ^1.3.1
 
 
 
