--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,6 +20,12 @@
             "request": "launch",
             "type": "dart",
             "flutterMode": "release"
+        },
+        {
+            "name": "Flutter (test/widget_test.dart)",
+            "type": "dart",
+            "request": "launch",
+            "program": "test/widget_test.dart"
         }
     ]
 }
