--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,11 +49,11 @@ dependencies:
   image_picker: ^0.8.6 
   lottie: ^2.0.0
   geolocator: ^9.0.2
+  geolocator_apple: 2.1.1+1
   nock: ^1.2.1
   network_image_mock: ^2.0.1
   mocktail_image_network: ^0.3.1
   fake_async: ^1.3.1
-
 
 
     
